--- a/control/diagrams/angle_controller.tex
+++ b/control/diagrams/angle_controller.tex
@@ -55,7 +55,7 @@
       \path[draw,->] (sat_ctrl.east) -- node[text centered, anchor=south] {$\Omega_\text{sp}$} (output.west);
     \end{tikzpicture}
 
-    \caption{Quaternion based angle controller \cite{PX4_controller_diagrams}}
+    \caption{Quaternion based angle controller diagram \cite{PX4_controller_diagrams}}
     \label{fig:angle_controller}
   
   \end{figure}
