Added plot for MPC with different payloads

--- a/control/control.tex
+++ b/control/control.tex
@@ -283,6 +283,8 @@
         QP solver
         C++ generation
 
+        \input{control/plots/mpc_tuning_plot.tex}
+
 } % End tikz set for controllers overview
 
 {
