--- a/control/plots/lqr_tuning_plot.tex
+++ b/control/plots/lqr_tuning_plot.tex
@@ -25,20 +25,20 @@
             }
         ]
         
-        % \addplot+[mark = none, style = solid, ultra thick] 
-        % table[x = time, y = vel_sp, col sep = comma] 
-        % {control/csv/compare_control_lqr_Simulink_single_pend_mp0.1_l0.5_LQR_vel_steps_tune_scale_0.7.csv};
-        % \addlegendentry{Setpoint}
+        \addplot+[mark = none, style = solid, ultra thick] 
+        table[x = time, y = vel_sp, col sep = comma] 
+        {control/csv/compare_control_lqr_Simulink_single_pend_mp0.1_l0.5_LQR_vel_steps_tune_scale_0.7.csv};
+        \addlegendentry{Setpoint}
 
-        % \addplot+[mark = none, style = solid, ultra thick] 
-        % table[x = time, y = vel, col sep = comma] 
-        % {control/csv/compare_control_lqr_Simulink_single_pend_mp0.1_l0.5_LQR_vel_steps_tune_scale_0.7.csv};
-        % \addlegendentry{($l =$~\SI{0.5}{\meter}, $m_p =$~\SI{0.1}{\kilo\gram})}
+        \addplot+[mark = none, style = solid, ultra thick] 
+        table[x = time, y = vel, col sep = comma] 
+        {control/csv/compare_control_lqr_Simulink_single_pend_mp0.1_l0.5_LQR_vel_steps_tune_scale_0.7.csv};
+        \addlegendentry{($l =$~\SI{0.5}{\meter}, $m_p =$~\SI{0.1}{\kilo\gram})}
 
-        % \addplot+[mark = none, style = solid, ultra thick] 
-        % table[x = time, y = vel, col sep = comma] 
-        % {control/csv/compare_control_lqr_Simulink_single_pend_mp0.2_l1_LQR_vel_steps_tune_scale_0.7.csv};
-        % \addlegendentry{($l =$~\SI{1}{\meter}, $m_p =$~\SI{0.2}{\kilo\gram})}
+        \addplot+[mark = none, style = solid, ultra thick] 
+        table[x = time, y = vel, col sep = comma] 
+        {control/csv/compare_control_lqr_Simulink_single_pend_mp0.2_l1_LQR_vel_steps_tune_scale_0.7.csv};
+        \addlegendentry{($l =$~\SI{1}{\meter}, $m_p =$~\SI{0.2}{\kilo\gram})}
 
         \addplot+[mark = none, style = solid, ultra thick] 
         table[x = time, y = vel, col sep = comma] 
